refactor: 完成项目生产化重构与基础设施搭建
此提交完成了项目从基础开发到生产可用版本的全面重构：
1.  添加Maven Wrapper统一构建环境，更新.gitignore忽略构建产物与依赖
2.  新增Docker镜像构建流程与多环境docker-compose配置
3.  替换手动SQL迁移为Flyway数据库版本管理，重构迁移脚本保证幂等性
4.  重构AuthService支持可配置会话超时与密码强度校验
5.  新增限流过滤器与Spring Boot Actuator监控支持
6.  新增Windows、PowerShell、Linux多平台部署脚本
7.  配置GitHub Actions CI流水线实现自动构建与测试
8.  优化Nginx配置增加安全头与限流规则
9.  移除旧的手动SchemaMigration类，统一使用Flyway管理数据库变更